support cleaning up ipynb before committing

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import datetime\n",
+    "import itertools\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "DATADIR = \"data/keras\"\n",
     "NUM_CHARACTERS = len(os.listdir(os.path.join(DATADIR, \"train\", \"images\")))"
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,67 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_3 (InputLayer)         (None, 584, 480, 3)       0         \n",
-      "_________________________________________________________________\n",
-      "block1_conv1 (Conv2D)        (None, 584, 480, 64)      1792      \n",
-      "_________________________________________________________________\n",
-      "block1_conv2 (Conv2D)        (None, 584, 480, 64)      36928     \n",
-      "_________________________________________________________________\n",
-      "block1_pool (MaxPooling2D)   (None, 292, 240, 64)      0         \n",
-      "_________________________________________________________________\n",
-      "block2_conv1 (Conv2D)        (None, 292, 240, 128)     73856     \n",
-      "_________________________________________________________________\n",
-      "block2_conv2 (Conv2D)        (None, 292, 240, 128)     147584    \n",
-      "_________________________________________________________________\n",
-      "block2_pool (MaxPooling2D)   (None, 146, 120, 128)     0         \n",
-      "_________________________________________________________________\n",
-      "block3_conv1 (Conv2D)        (None, 146, 120, 256)     295168    \n",
-      "_________________________________________________________________\n",
-      "block3_conv2 (Conv2D)        (None, 146, 120, 256)     590080    \n",
-      "_________________________________________________________________\n",
-      "block3_conv3 (Conv2D)        (None, 146, 120, 256)     590080    \n",
-      "_________________________________________________________________\n",
-      "block3_pool (MaxPooling2D)   (None, 73, 60, 256)       0         \n",
-      "_________________________________________________________________\n",
-      "block4_conv1 (Conv2D)        (None, 73, 60, 512)       1180160   \n",
-      "_________________________________________________________________\n",
-      "block4_conv2 (Conv2D)        (None, 73, 60, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_conv3 (Conv2D)        (None, 73, 60, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_pool (MaxPooling2D)   (None, 36, 30, 512)       0         \n",
-      "_________________________________________________________________\n",
-      "block5_conv1 (Conv2D)        (None, 36, 30, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv2 (Conv2D)        (None, 36, 30, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv3 (Conv2D)        (None, 36, 30, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_pool (MaxPooling2D)   (None, 18, 15, 512)       0         \n",
-      "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 138240)            0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 128)               17694848  \n",
-      "_________________________________________________________________\n",
-      "predictions (Dense)          (None, 5)                 645       \n",
-      "=================================================================\n",
-      "Total params: 32,410,181\n",
-      "Trainable params: 17,695,493\n",
-      "Non-trainable params: 14,714,688\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -182,34 +128,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 78406 images belonging to 5 classes.\n",
-      "Found 9801 images belonging to 5 classes.\n",
-      "Epoch 1/10\n",
-      "475/475 [==============================] - 1072s 2s/step - loss: 1.2433 - acc: 0.4914 - val_loss: 0.9657 - val_acc: 0.6453\n",
-      "Epoch 2/10\n",
-      "475/475 [==============================] - 1046s 2s/step - loss: 0.9030 - acc: 0.6612 - val_loss: 0.8073 - val_acc: 0.6865\n",
-      "Epoch 3/10\n",
-      "475/475 [==============================] - 1042s 2s/step - loss: 0.7801 - acc: 0.7111 - val_loss: 0.7523 - val_acc: 0.7245\n",
-      "Epoch 4/10\n",
-      "475/475 [==============================] - 1046s 2s/step - loss: 0.6906 - acc: 0.7522 - val_loss: 0.7245 - val_acc: 0.7354\n",
-      "Epoch 5/10\n",
-      "475/475 [==============================] - 1053s 2s/step - loss: 0.6242 - acc: 0.7771 - val_loss: 0.5781 - val_acc: 0.8016\n",
-      "Epoch 6/10\n",
-      "475/475 [==============================] - 1056s 2s/step - loss: 0.5589 - acc: 0.8010 - val_loss: 0.5246 - val_acc: 0.8042\n",
-      "Epoch 7/10\n",
-      "475/475 [==============================] - 1053s 2s/step - loss: 0.5185 - acc: 0.8150 - val_loss: 0.5296 - val_acc: 0.8073\n",
-      "Epoch 8/10\n",
-      "475/475 [==============================] - 1045s 2s/step - loss: 0.5026 - acc: 0.8223 - val_loss: 0.5254 - val_acc: 0.8016\n",
-      "Epoch 9/10\n",
-      "291/475 [=================>............] - ETA: 5:50 - loss: 0.4614 - acc: 0.8405"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit_generator(generator=make_generator(\"train\"),\n",
     "                    steps_per_epoch=steps_per_epoch(\"train\"),\n",
@@ -220,18 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "\n",
     "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d') + \"-short-epochs-1-hidden-layer.h5\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,17 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 9800 images belonging to 5 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_batches = make_test_generator()\n",
     "class_dict = test_batches.class_indices\n",
@@ -267,191 +176,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, vectors = next(test_batches)\n",
-    "true_labels = [index_dict[i] for i in vectors.argmax(1)]\n",
-    "predictions = model.predict_on_batch(images)\n",
-    "pred_labels = [index_dict[i] for i in predictions.argmax(1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 531,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Predicted</th>\n",
-       "      <th>True</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>marth</td>\n",
-       "      <td>marth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>peach</td>\n",
-       "      <td>peach</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>falco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>marth</td>\n",
-       "      <td>fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>falco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>peach</td>\n",
-       "      <td>peach</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>marth</td>\n",
-       "      <td>fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>falco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>falco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>peach</td>\n",
-       "      <td>fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>jigglypuff</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>peach</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>falco</td>\n",
-       "      <td>fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>jigglypuff</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>jigglypuff</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>peach</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>peach</td>\n",
-       "      <td>marth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>fox</td>\n",
-       "      <td>fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>jigglypuff</td>\n",
-       "      <td>jigglypuff</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>32 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Predicted        True\n",
-       "0        marth       marth\n",
-       "1        peach       peach\n",
-       "2        falco       falco\n",
-       "3        marth         fox\n",
-       "4        falco       falco\n",
-       "5        peach       peach\n",
-       "6        marth         fox\n",
-       "7        falco  jigglypuff\n",
-       "8        falco       falco\n",
-       "9        falco       falco\n",
-       "..         ...         ...\n",
-       "22       peach         fox\n",
-       "23  jigglypuff  jigglypuff\n",
-       "24       falco       peach\n",
-       "25       falco         fox\n",
-       "26  jigglypuff  jigglypuff\n",
-       "27  jigglypuff  jigglypuff\n",
-       "28       peach  jigglypuff\n",
-       "29       peach       marth\n",
-       "30         fox         fox\n",
-       "31  jigglypuff  jigglypuff\n",
-       "\n",
-       "[32 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 531,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame({'True': true_labels, 'Predicted': pred_labels})"
+    "def plot_confusion_matrix(matrix, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    if normalize:\n",
+    "        matrix = matrix.astype('float') / matrix.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    plt.imshow(matrix, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    fmt = '.2f' if normalize else 'd'\n",
+    "    thresh = matrix.max() / 2.\n",
+    "    for i, j in itertools.product(range(matrix.shape[0]), range(matrix.shape[1])):\n",
+    "        plt.text(j, i, format(matrix[i, j], fmt),\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if matrix[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')"
    ]
   },
   {
@@ -459,10 +215,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "images, vectors = next(test_batches)\n",
+    "true_indices = vectors.argmax(1)\n",
+    "predictions = model.predict_on_batch(images)\n",
+    "prediction_indices = predictions.argmax(1)\n",
+    "class_names = [c for i, c in sorted(index_dict.items())]\n",
+    "\n",
+    "cnf_matrix = confusion_matrix(true_indices, prediction_indices)\n",
+    "plot_confusion_matrix(cnf_matrix, classes=class_names, normalize=True,\n",
+    "                      title='Normalized confusion matrix')"
+   ]
   }
  ],
  "metadata": {
+  "git": {
+   "suppress_outputs": true
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
