--- a/smash.ipynb
+++ b/smash.ipynb
@@ -33,7 +33,9 @@
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "DATADIR = \"data/keras\"\n",
-    "NUM_CHARACTERS = len(os.listdir(os.path.join(DATADIR, \"train\", \"images\")))"
+    "NUM_CHARACTERS = len(os.listdir(os.path.join(DATADIR, \"train\", \"images\")))\n",
+    "BATCH_SIZE = 32\n",
+    "LEARNING_RATE = 0.0001"
    ]
   },
   {
@@ -63,9 +65,13 @@
     "\n",
     "    output_tensor = pretrained_model.output\n",
     "    output_tensor = Flatten()(output_tensor)\n",
-    "    output_tensor = Dense(128, activation='relu')(output_tensor)\n",
-    "    # output_tensor = Dense(128, activation='relu')(output_tensor)\n",
-    "    output_tensor = Dense(target_num, activation=\"softmax\", name=\"predictions\")(output_tensor)\n",
+    "    output_tensor = Dense(128, activation='relu', \n",
+    "                          kernel_initializer='lecun_uniform')(output_tensor)\n",
+    "    # output_tensor = Dense(128, activation='relu', \n",
+    "    #                       kernel_initializer='lecun_uniform')(output_tensor)\n",
+    "    output_tensor = Dense(target_num, activation=\"softmax\", \n",
+    "                          kernel_initializer='lecun_uniform', \n",
+    "                          name=\"predictions\")(output_tensor)\n",
     "\n",
     "    # Define and compile the model\n",
     "    model = Model(inputs=pretrained_model.input, outputs=output_tensor)\n",
@@ -73,9 +79,16 @@
     "                  loss=\"categorical_crossentropy\",\n",
     "                  metrics=[\"accuracy\"])\n",
     "\n",
-    "    return model\n",
-    "\n",
-    "model = init_model(target_num=NUM_CHARACTERS)"
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = init_model(target_num=NUM_CHARACTERS, learning_rate=LEARNING_RATE)"
    ]
   },
   {
@@ -85,6 +98,7 @@
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
     "\n",
     "def make_generator(folder=\"train\",\n",
     "                   data_gen_args={\"fill_mode\": \"constant\",\n",
@@ -93,9 +107,10 @@
     "                                  \"height_shift_range\": 0.05,\n",
     "                                  \"zoom_range\": 0.1,\n",
     "                                  \"horizontal_flip\": True,\n",
-    "                                  \"rescale\": 1.0 / 255},\n",
+    "                                  \"rescale\": 1.0 / 255,\n",
+    "                                  \"preprocessing_function\": preprocess_input},\n",
     "                   data_flow_args={\"seed\": 1,\n",
-    "                                   \"batch_size\": 32}):\n",
+    "                                   \"batch_size\": BATCH_SIZE}):\n",
     "\n",
     "    image_datagen = ImageDataGenerator(**data_gen_args)\n",
     "\n",
@@ -107,11 +122,14 @@
     "\n",
     "    return image_generator\n",
     "\n",
-    "def steps_per_epoch(folder=\"train\", batch_size=32):\n",
+    "def steps_per_epoch(folder=\"train\", batch_size=BATCH_SIZE):\n",
     "    image_directory = os.path.join(DATADIR, folder, \"images\")\n",
-    "    char_name = os.listdir(image_directory)[0]\n",
-    "    char_directory = os.path.join(image_directory, char_name)\n",
-    "    data_size = len(os.listdir(char_directory))\n",
+    "    data_size = 0\n",
+    "    \n",
+    "    for char_name in os.listdir(image_directory):\n",
+    "        char_directory = os.path.join(image_directory, char_name)\n",
+    "        data_size += len(os.listdir(char_directory))\n",
+    "    \n",
     "    return data_size // batch_size"
    ]
   },
@@ -130,11 +148,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit_generator(generator=make_generator(\"train\"),\n",
-    "                    steps_per_epoch=steps_per_epoch(\"train\"),\n",
-    "                    epochs=10,\n",
-    "                    validation_data=make_generator(\"valid\"),\n",
-    "                    validation_steps=steps_per_epoch(\"valid\"))"
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, \n",
+    "                                 patience=2, verbose=0, mode='auto')\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, \n",
+    "                              patience=2, min_lr=0.00001)\n",
+    "\n",
+    "training_history = model.fit_generator(generator=make_generator(\"train\"),\n",
+    "                                       steps_per_epoch=steps_per_epoch(\"train\"),\n",
+    "                                       epochs=20,\n",
+    "                                       validation_data=make_generator(\"valid\"),\n",
+    "                                       validation_steps=steps_per_epoch(\"valid\"),\n",
+    "                                       callbacks=[stop_on_val_loss])"
    ]
   },
   {
@@ -143,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d') + \"-short-epochs-1-hidden-layer.h5\"))"
+    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-FIXED-DATA.h5\"))"
    ]
   },
   {
@@ -154,7 +180,7 @@
    "source": [
     "def make_test_generator(folder=\"test\",\n",
     "                        data_flow_args={\"seed\": 1,\n",
-    "                                        \"batch_size\": 32}):\n",
+    "                                        \"batch_size\": BATCH_SIZE}):\n",
     "\n",
     "    return ImageDataGenerator().flow_from_directory(\n",
     "        directory=os.path.join(DATADIR, folder, \"images\"),\n",
@@ -236,18 +262,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
