--- a/smash.ipynb
+++ b/smash.ipynb
@@ -34,8 +34,93 @@
     "\n",
     "DATADIR = \"data/keras\"\n",
     "NUM_CHARACTERS = len(os.listdir(os.path.join(DATADIR, \"train\", \"images\")))\n",
-    "BATCH_SIZE = 32\n",
-    "LEARNING_RATE = 0.0001"
+    "BATCH_SIZE = 16\n",
+    "LEARNING_RATE = 0.0001\n",
+    "\n",
+    "IMAGE_ROW_SIZE = 584\n",
+    "IMAGE_COLUMN_SIZE = 480"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
+    "\n",
+    "def make_generator(folder=\"train\",\n",
+    "                   data_gen_args={\"fill_mode\": \"constant\",\n",
+    "                                  \"cval\": 0,\n",
+    "                                  \"width_shift_range\": 0.05,\n",
+    "                                  \"height_shift_range\": 0.05,\n",
+    "                                  \"zoom_range\": 0.1,\n",
+    "                                  \"horizontal_flip\": True,\n",
+    "                                  \"rescale\": 1.0 / 255,\n",
+    "                                  \"preprocessing_function\": preprocess_input},\n",
+    "                   data_flow_args={\"seed\": 1,\n",
+    "                                   \"batch_size\": BATCH_SIZE}):\n",
+    "\n",
+    "    image_datagen = ImageDataGenerator(**data_gen_args)\n",
+    "\n",
+    "    image_generator = image_datagen.flow_from_directory(\n",
+    "        directory=os.path.join(DATADIR, folder, \"images\"),\n",
+    "        target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),\n",
+    "        color_mode='rgb',\n",
+    "        **data_flow_args)\n",
+    "\n",
+    "    return image_generator\n",
+    "\n",
+    "\n",
+    "def count_images(folder=\"train\"):\n",
+    "    image_directory = os.path.join(DATADIR, folder, \"images\")\n",
+    "    data_size = 0\n",
+    "\n",
+    "    for char_name in os.listdir(image_directory):\n",
+    "        char_directory = os.path.join(image_directory, char_name)\n",
+    "        data_size += len(os.listdir(char_directory))\n",
+    "\n",
+    "    return data_size\n",
+    "\n",
+    "\n",
+    "def steps_per_epoch(folder=\"train\", batch_size=BATCH_SIZE):\n",
+    "    return count_images(folder) // batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.applications.vgg16 import VGG16\n",
+    "\n",
+    "model = VGG16(include_top=False, weights=\"imagenet\")\n",
+    "\n",
+    "image_count_train = count_images(\"train\")\n",
+    "generator_train = make_generator(\"train\",\n",
+    "                                 data_gen_args={\"rescale\": 1.0 / 255},\n",
+    "                                 data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "                                                 \"class_mode\": None,\n",
+    "                                                 \"shuffle\": False})\n",
+    "\n",
+    "bottleneck_features_train = model.predict_generator(generator_train,\n",
+    "                                                    image_count_train)\n",
+    "np.save(open('bottleneck_features_train.npy', 'w'),\n",
+    "        bottleneck_features_train)\n",
+    "\n",
+    "image_count_valid = count_images(\"valid\")\n",
+    "generator_valid = make_generator(\"valid\",\n",
+    "                                 data_gen_args={\"rescale\": 1.0 / 255},\n",
+    "                                 data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "                                                 \"class_mode\": None,\n",
+    "                                                 \"shuffle\": False})\n",
+    "\n",
+    "bottleneck_features_valid = model.predict_generator(generator_valid,\n",
+    "                                                    image_count_valid)\n",
+    "np.save(open('bottleneck_features_valid.npy', 'w'),\n",
+    "        bottleneck_features_valid)"
    ]
   },
   {
@@ -49,10 +134,6 @@
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.models import Model\n",
     "from keras.optimizers import Adam\n",
-    "\n",
-    "# Image processing\n",
-    "IMAGE_ROW_SIZE = 584\n",
-    "IMAGE_COLUMN_SIZE = 480\n",
     "\n",
     "def init_model(target_num=4, dropout_ratio=0.5, learning_rate=0.0001):\n",
     "    input_shape = (IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, 3)\n",
@@ -89,48 +170,6 @@
    "outputs": [],
    "source": [
     "model = init_model(target_num=NUM_CHARACTERS, learning_rate=LEARNING_RATE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.applications.imagenet_utils import preprocess_input\n",
-    "\n",
-    "def make_generator(folder=\"train\",\n",
-    "                   data_gen_args={\"fill_mode\": \"constant\",\n",
-    "                                  \"cval\": 0,\n",
-    "                                  \"width_shift_range\": 0.05,\n",
-    "                                  \"height_shift_range\": 0.05,\n",
-    "                                  \"zoom_range\": 0.1,\n",
-    "                                  \"horizontal_flip\": True,\n",
-    "                                  \"rescale\": 1.0 / 255,\n",
-    "                                  \"preprocessing_function\": preprocess_input},\n",
-    "                   data_flow_args={\"seed\": 1,\n",
-    "                                   \"batch_size\": BATCH_SIZE}):\n",
-    "\n",
-    "    image_datagen = ImageDataGenerator(**data_gen_args)\n",
-    "\n",
-    "    image_generator = image_datagen.flow_from_directory(\n",
-    "        directory=os.path.join(DATADIR, folder, \"images\"),\n",
-    "        target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),\n",
-    "        color_mode='rgb',\n",
-    "        **data_flow_args)\n",
-    "\n",
-    "    return image_generator\n",
-    "\n",
-    "def steps_per_epoch(folder=\"train\", batch_size=BATCH_SIZE):\n",
-    "    image_directory = os.path.join(DATADIR, folder, \"images\")\n",
-    "    data_size = 0\n",
-    "    \n",
-    "    for char_name in os.listdir(image_directory):\n",
-    "        char_directory = os.path.join(image_directory, char_name)\n",
-    "        data_size += len(os.listdir(char_directory))\n",
-    "    \n",
-    "    return data_size // batch_size"
    ]
   },
   {
@@ -262,6 +301,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
