track ipynb changes

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,10 @@
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "DATADIR = \"data/keras\"\n",
-    "NUM_CHARACTERS = len(os.listdir(os.path.join(DATADIR, \"train\", \"images\")))\n",
+    "CHAR_NAMES = os.listdir(os.path.join(DATADIR, \"train\", \"images\"))\n",
+    "NUM_CHARACTERS = len(CHAR_NAMES)\n",
     "BATCH_SIZE = 16\n",
+    "BIG_BATCH_SIZE = 32\n",
     "LEARNING_RATE = 0.01\n",
     "\n",
     "IMAGE_ROW_SIZE = 584\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +101,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should not run this every time, instead just need to run it once to generate VGG16 features.\n",
-    "\n",
-    "It takes a very long time to run."
+    "Just fyi, in the following we're only dealing with about 30% of all the images.  That's to ensure we can fit all the cached features in memory.  We generated these lists with `make keras KERAS_TRAIN_PCT=20 KERAS_TEST_PCT=5 KERAS_VALID_PCT=5`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This all takes a very long time to run.  We should not run this every time, rather just run it once to generate and save the VGG16 features.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,30 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 93638 images belonging to 8 classes.\n",
-      "Found 93638 images belonging to 8 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_count_train = count_images(\"train\")\n",
+    "image_count_train_generator_cutoff = image_count_train / BIG_BATCH_SIZE + 1\n",
+    "\n",
     "generator_train = make_generator(\n",
     "    \"train\",\n",
     "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
-    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
     "                    \"class_mode\": None,\n",
     "                    \"shuffle\": False})\n",
     "generator_train_labels = make_generator(\n",
     "    \"train\",\n",
     "    data_gen_args={},\n",
-    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
     "                    \"shuffle\": False})"
    ]
   },
@@ -155,19 +155,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This step takes super long.  I wish I could figure out a faster way to pull out just the labels in generator order."
+    "This step takes a while.  I wish I could figure out a faster way to pull out just the labels in generator order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "labels_train = []\n",
-    "image_count_train_cutoff = image_count_train / BATCH_SIZE + 1\n",
+    "\n",
     "for i, (_, labels) in enumerate(generator_train_labels):\n",
-    "    if i >= image_count_train_cutoff:\n",
+    "    if i >= image_count_train_generator_cutoff:\n",
     "        break\n",
     "    else:\n",
     "        labels_train.extend(labels)\n",
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then this one takes a while too, but at least it makes sense why.  I wish I could figure out a faster way to do this as well."
+    "Then this one takes super long, because we're running VGG16.  I've tried upping the batch size as much as I can, but it's still quite slow.  The resulting feature array is also quite huge."
    ]
   },
   {
@@ -205,10 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(DATADIR, 'bottleneck_features_train.npy'), 'bw') as train:\n",
-    "    np.save(train, bottleneck_features_train)\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_feature_labels_train.npy'), 'bw') as train:\n",
-    "    np.save(train, labels_train)"
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_train'), bottleneck_features_train)\n",
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_train'), labels_train)"
    ]
   },
   {
@@ -221,39 +219,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "image_count_valid = count_images(\"valid\")\n",
+    "image_count_valid_generator_cutoff = image_count_valid / BIG_BATCH_SIZE + 1\n",
+    "\n",
     "generator_valid = make_generator(\n",
     "    \"valid\",\n",
     "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
-    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
     "                    \"class_mode\": None,\n",
     "                    \"shuffle\": False})\n",
     "generator_valid_labels = make_generator(\n",
     "    \"valid\",\n",
     "    data_gen_args={},\n",
-    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
     "                    \"shuffle\": False})\n",
     "\n",
     "labels_valid = []\n",
-    "image_count_valid_cutoff = image_count_valid / BATCH_SIZE + 1\n",
     "for i, (_, labels) in enumerate(generator_valid_labels):\n",
-    "    if i >= image_count_valid_cutoff:\n",
+    "    if i >= image_count_valid_generator_cutoff:\n",
     "        break\n",
     "    else:\n",
     "        labels_valid.extend(labels)\n",
     "labels_valid = np.array(labels_valid[:image_count_valid])\n",
     "\n",
     "bottleneck_features_valid = model.predict_generator(generator_valid,\n",
-    "                                                    image_count_valid_cutoff)\n",
+    "                                                    image_count_valid_generator_cutoff)\n",
     "bottleneck_features_valid = bottleneck_features_valid[:image_count_valid]\n",
     "\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_features_valid.npy'), 'bw') as valid:\n",
-    "    np.save(valid, bottleneck_features_valid)\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_feature_labels_valid.npy'), 'bw') as valid:\n",
-    "    np.save(valid, labels_valid)"
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_valid'), bottleneck_features_valid)\n",
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_valid'), labels_valid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And with our test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_count_test = count_images(\"test\")\n",
+    "image_count_test_generator_cutoff = image_count_test / BIG_BATCH_SIZE + 1\n",
+    "\n",
+    "generator_test = make_generator(\n",
+    "    \"test\",\n",
+    "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "                    \"class_mode\": None,\n",
+    "                    \"shuffle\": False})\n",
+    "generator_test_labels = make_generator(\n",
+    "    \"test\",\n",
+    "    data_gen_args={},\n",
+    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "                    \"shuffle\": False})\n",
+    "\n",
+    "labels_test = []\n",
+    "for i, (_, labels) in enumerate(generator_test_labels):\n",
+    "    if i >= image_count_test_generator_cutoff:\n",
+    "        break\n",
+    "    else:\n",
+    "        labels_test.extend(labels)\n",
+    "labels_test = np.array(labels_test[:image_count_test])\n",
+    "\n",
+    "bottleneck_features_test = model.predict_generator(generator_test,\n",
+    "                                                   image_count_test_generator_cutoff)\n",
+    "bottleneck_features_test = bottleneck_features_test[:image_count_test]\n",
+    "\n",
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_test'), bottleneck_features_test)\n",
+    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_test'), labels_test)"
    ]
   },
   {
@@ -276,22 +319,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(DATADIR, 'bottleneck_features_train.npy'), 'rb') as train:\n",
-    "    train_data = np.load(train)\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_feature_labels_train.npy'), 'rb') as train:\n",
-    "    train_labels = np.load(train)\n",
+    "train_data = np.load(os.path.join(DATADIR, 'bottleneck_features_train.npz'))\n",
+    "train_data = train_data['arr_0']\n",
     "\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_features_valid.npy'), 'rb') as valid:\n",
-    "    valid_data = np.load(valid)\n",
-    "with open(os.path.join(DATADIR, 'bottleneck_feature_labels_valid.npy'), 'rb') as valid:\n",
-    "    valid_labels = np.load(valid)"
+    "train_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_train.npz'))\n",
+    "train_labels = train_labels['arr_0']\n",
+    "\n",
+    "valid_data = np.load(os.path.join(DATADIR, 'bottleneck_features_valid.npz'))\n",
+    "valid_data = valid_data['arr_0']\n",
+    "\n",
+    "valid_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_valid.npz'))\n",
+    "valid_labels = valid_labels['arr_0']\n",
+    "\n",
+    "test_data = np.load(os.path.join(DATADIR, 'bottleneck_features_test.npz'))\n",
+    "test_data = test_data['arr_0']\n",
+    "\n",
+    "test_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_test.npz'))\n",
+    "test_labels = test_labels['arr_0']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're gonna need these callbacks."
+    "We're gonna need these callbacks and functions."
    ]
   },
   {
@@ -306,104 +357,6 @@
     "                                 patience=2, verbose=0, mode='auto')\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, \n",
     "                              patience=2, min_lr=0.00001)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And, finally, start training our model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.models import Sequential\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.layers import Dropout, Flatten, Dense\n",
-    "\n",
-    "def init_model(input_shape, target_num=NUM_CHARACTERS,\n",
-    "               learning_rate=LEARNING_RATE):\n",
-    "    model = Sequential()\n",
-    "    model.add(Flatten(input_shape=input_shape))\n",
-    "    model.add(Dense(128, activation='relu', kernel_initializer='lecun_uniform'))\n",
-    "    model.add(Dense(target_num, activation='softmax'))\n",
-    "\n",
-    "    model.compile(optimizer=Adam(lr=learning_rate),\n",
-    "                loss='categorical_crossentropy',\n",
-    "                metrics=['accuracy'])\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = init_model(train_data.shape[1:], learning_rate=0.0001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_history = model.fit(train_data, train_labels,\n",
-    "                             epochs=50,\n",
-    "                             batch_size=BATCH_SIZE,\n",
-    "                             validation_data=(valid_data, valid_labels),\n",
-    "                             callbacks=[stop_on_val_loss, reduce_lr])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-FIXED-DATA.h5\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_test_generator(folder=\"test\",\n",
-    "                        data_flow_args={\"seed\": 1,\n",
-    "                                        \"batch_size\": BATCH_SIZE}):\n",
-    "\n",
-    "    return ImageDataGenerator().flow_from_directory(\n",
-    "        directory=os.path.join(DATADIR, folder, \"images\"),\n",
-    "        target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),\n",
-    "        color_mode='rgb',\n",
-    "        **data_flow_args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_batches = make_test_generator()\n",
-    "class_dict = test_batches.class_indices\n",
-    "index_dict = {i: c for c, i in class_dict.items()}"
    ]
   },
   {
@@ -448,15 +401,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, vectors = next(test_batches)\n",
-    "true_indices = vectors.argmax(1)\n",
-    "predictions = model.predict_on_batch(images)\n",
-    "prediction_indices = predictions.argmax(1)\n",
-    "class_names = [c for i, c in sorted(index_dict.items())]\n",
+    "from keras.models import Sequential\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.layers import Dropout, Flatten, Dense\n",
     "\n",
-    "cnf_matrix = confusion_matrix(true_indices, prediction_indices)\n",
-    "plot_confusion_matrix(cnf_matrix, classes=class_names, normalize=True,\n",
-    "                      title='Normalized confusion matrix')"
+    "def init_model(input_shape, target_num=NUM_CHARACTERS,\n",
+    "               learning_rate=LEARNING_RATE, \n",
+    "               hidden_width=128, hidden_depth=1):\n",
+    "    model = Sequential()\n",
+    "    model.add(Flatten(input_shape=input_shape))\n",
+    "    for _ in range(hidden_depth):\n",
+    "        model.add(Dense(hidden_width, activation='relu', \n",
+    "                        kernel_initializer='lecun_uniform'))\n",
+    "    model.add(Dense(target_num, activation='softmax'))\n",
+    "\n",
+    "    model.compile(optimizer=Adam(lr=learning_rate),\n",
+    "                loss='categorical_crossentropy',\n",
+    "                metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And, finally, start training our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = init_model(train_data.shape[1:], learning_rate=0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_history = model.fit(train_data, train_labels,\n",
+    "                             epochs=50,\n",
+    "                             batch_size=BATCH_SIZE,\n",
+    "                             validation_data=(valid_data, valid_labels),\n",
+    "                             callbacks=[stop_on_val_loss, reduce_lr])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-more-data.h5\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test the model we'll need to slap it together with VGG16.  I'll do that tomorrow."
    ]
   }
  ],
