--- a/smash.ipynb
+++ b/smash.ipynb
@@ -355,7 +355,7 @@
     "NUM_CHARACTERS = len(CHAR_NAMES)\n",
     "\n",
     "stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, \n",
-    "                                 patience=2, verbose=0, mode='auto')\n",
+    "                                 patience=3, verbose=0, mode='auto')\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, \n",
     "                              patience=2, min_lr=0.00001)"
    ]
@@ -435,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = init_model(train_data.shape[1:], learning_rate=0.0001)"
+    "model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256)"
    ]
   },
   {
@@ -450,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "training_history = model.fit(train_data, train_labels,\n",
@@ -496,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
