--- a/smash.ipynb
+++ b/smash.ipynb
@@ -550,14 +550,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "training_history = model.fit_generator(generator=make_generator(\"train\"),\n",
     "                                       steps_per_epoch=steps_per_epoch(\"train\"),\n",
     "                                       epochs=50,\n",
     "                                       validation_data=make_generator(\"valid\"),\n",
-    "                                       validation_steps=steps_per_epoch(\"valid\"))"
+    "                                       validation_steps=steps_per_epoch(\"valid\"),\n",
+    "                                       callbacks=[stop_on_val_loss, reduce_lr])"
    ]
   },
   {
@@ -566,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-full-model-all-data.h5\"))"
+    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-full-model-battlefield-final-dreamland.h5\"))"
    ]
   }
  ],
@@ -578,18 +581,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
