include dropout in keras model

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -498,7 +498,7 @@
    "outputs": [],
    "source": [
     "from keras.applications.vgg16 import VGG16\n",
-    "from keras.layers import Dense, Flatten\n",
+    "from keras.layers import Dense, Flatten, Dropout\n",
     "from keras.models import Model\n",
     "from keras.optimizers import Adam\n",
     "\n",
@@ -517,6 +517,7 @@
     "    for _ in range(hidden_depth):\n",
     "        output_tensor = Dense(hidden_width, activation='relu', \n",
     "                              kernel_initializer='lecun_uniform')(output_tensor)\n",
+    "        output_tensor = Dropout(0.2)(output_tensor)\n",
     "    output_tensor = Dense(target_num, activation=\"softmax\", \n",
     "                          name=\"predictions\")(output_tensor)\n",
     "\n",
