--- a/smash.ipynb
+++ b/smash.ipynb
@@ -410,12 +410,13 @@
     "\n",
     "def init_model(input_shape, target_num=NUM_CHARACTERS,\n",
     "               learning_rate=LEARNING_RATE, \n",
-    "               hidden_width=128, hidden_depth=1):\n",
+    "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
     "    model = Sequential()\n",
     "    model.add(Flatten(input_shape=input_shape))\n",
     "    for _ in range(hidden_depth):\n",
     "        model.add(Dense(hidden_width, activation='relu', \n",
     "                        kernel_initializer='lecun_uniform'))\n",
+    "        model.add(Dropout(dropout_rate))\n",
     "    model.add(Dense(target_num, activation='softmax'))\n",
     "\n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
@@ -430,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256)"
+    "model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256, hidden_depth=1, dropout_rate=0.2)"
    ]
   },
   {
@@ -451,7 +452,7 @@
    "outputs": [],
    "source": [
     "training_history = model.fit(train_data_r, train_labels_r,\n",
-    "                             epochs=5,\n",
+    "                             epochs=50,\n",
     "                             batch_size=BATCH_SIZE,\n",
     "                             validation_data=(valid_data_r, valid_labels_r),\n",
     "                             callbacks=[stop_on_val_loss, reduce_lr])"
