rename DATADIR -> DATA_DIR

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -32,7 +32,6 @@
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "DATADIR = \"data/keras\"\n",
     "BATCH_SIZE = 16\n",
     "LEARNING_RATE = 0.0001\n",
     "\n",
@@ -55,7 +54,7 @@
    "source": [
     "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "\n",
-    "CHAR_NAMES = os.listdir(os.path.join(DATADIR, \"train\", \"images\"))\n",
+    "CHAR_NAMES = os.listdir(os.path.join(DATA_DIR, \"train\", \"images\"))\n",
     "NUM_CHARACTERS = len(CHAR_NAMES)\n",
     "\n",
     "stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, \n",
@@ -123,7 +122,7 @@
     "    image_datagen = ImageDataGenerator(**data_gen_args)\n",
     "\n",
     "    image_generator = image_datagen.flow_from_directory(\n",
-    "        directory=os.path.join(DATADIR, folder, \"images\"),\n",
+    "        directory=os.path.join(DATA_DIR, folder, \"images\"),\n",
     "        target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),\n",
     "        color_mode='rgb',\n",
     "        **data_flow_args)\n",
@@ -132,7 +131,7 @@
     "\n",
     "\n",
     "def count_images(folder=\"train\"):\n",
-    "    image_directory = os.path.join(DATADIR, folder, \"images\")\n",
+    "    image_directory = os.path.join(DATA_DIR, folder, \"images\")\n",
     "    data_size = 0\n",
     "\n",
     "    for char_name in os.listdir(image_directory):\n",
